--- a/helm/bigmon/charts/main/values.yaml
+++ b/helm/bigmon/charts/main/values.yaml
@@ -99,6 +99,15 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
+route:
+  enabled: false
+
+  ### configuration for OKD
+  tls:
+    termination: passthrough
+    insecureEdgeTerminationPolicy: None
+
+
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
