--- a/helm/bigmon/charts/main/sandbox/config.py.template
+++ b/helm/bigmon/charts/main/sandbox/config.py.template
@@ -149,7 +149,7 @@ DB_N_MAX_IN_QUERY = 100  # number of items in IN (*,*..) query. if more - use tm
 CACHES = {
     "default": {
     'BACKEND': 'django.core.cache.backends.db.DatabaseCache',
-    'LOCATION': '"{settings.DB_SCHEMA}"."DJANGOCACHE"',
+    'LOCATION': f'"{DB_SCHEMA}"."DJANGOCACHE"',
     'TIMEOUT': 31536000,
     'OPTIONS': {
         'MAX_ENTRIES': 1000000000
@@ -158,7 +158,7 @@ CACHES = {
 }
 
 if DEPLOYMENT == 'POSTGRES':
-    CACHES['default']['LOCATION'] = '"{DB_SCHEMA}"."djangocache"'
+    CACHES['default']['LOCATION'] = f'"{DB_SCHEMA}"."djangocache"'
 
 
 ### URL_PATH_PREFIX for multi-developer apache/wsgi instance
