--- a/helm/bigmon/charts/main/templates/configmap.yaml
+++ b/helm/bigmon/charts/main/templates/configmap.yaml
@@ -18,10 +18,10 @@ metadata:
     name: {{ include "main.fullname" . }}-certs
 data:
     hostcert.pem: |-
-{{ .Files.Get "hostcert.pem" | indent 8}}
+{{ .Files.Get "cert/hostcert.pem" | indent 8}}
 
     hostkey.pem: |-
-{{ .Files.Get "hostkey.pem" | indent 8}}
+{{ .Files.Get "cert/hostkey.pem" | indent 8}}
 {{- end }}
 
 ---
