--- a/helm/bigmon/charts/main/templates/configmap.yaml
+++ b/helm/bigmon/charts/main/templates/configmap.yaml
@@ -16,12 +16,12 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "main.fullname" . }}-certs
-data:
+binaryData:
   hostcert.pem: |-
-    {{ .Files.Get "cert/hostcert.pem" }}
+    {{ .Files.Get "cert/hostcert.pem" | b64enc }}
 
   hostkey.pem: |-
-　  {{ .Files.Get "cert/hostkey.pem" }}
+　  {{ .Files.Get "cert/hostkey.pem" | b64enc }}
 {{- end }}
 
 ---
