--- a/helm/bigmon/charts/main/templates/deployment.yaml
+++ b/helm/bigmon/charts/main/templates/deployment.yaml
@@ -119,7 +119,7 @@ spec:
         - name: {{ include "main.fullname" . }}-configmap
           configMap:
               name: {{ include "main.fullname" . }}-configmap
-        {{- if .Values.hostcerts.enabled -}}
+        {{- if .Values.hostcerts.enabled }}
         - name: {{ include "main.fullname" . }}-certs
           configMap:
               name: {{ include "main.fullname" . }}-certs
