--- a/helm/bigmon/charts/main/sandbox/config.py.template
+++ b/helm/bigmon/charts/main/sandbox/config.py.template
@@ -19,6 +19,9 @@ ALLOWED_HOSTS = [
     '127.0.0.1', '.localhost'
 ]
 
+# IPs of CACHING CRAWLERS if any
+CACHING_CRAWLER_HOSTS = ['188.184.185.129', '188.184.116.46']
+
 ### VIRTUALENV
 VIRTUALENV_PATH = '/opt/bigmon'
 
