--- a/helm/bigmon/charts/main/values.yaml
+++ b/helm/bigmon/charts/main/values.yaml
@@ -32,6 +32,9 @@ hostName: "FIXME"
 # secret key for configuration
 secretKey: "FIXME"
 
+# Organization
+vo: "FIXME"
+
 httpd:
   # number of WSGI processes
   numWSGI: 10
