--- a/helm/bigmon/charts/main/templates/deployment.yaml
+++ b/helm/bigmon/charts/main/templates/deployment.yaml
@@ -86,6 +86,9 @@ spec:
             - name: https
               containerPort: 443
               protocol: TCP
+            - name: http
+              containerPort: 80
+              protocol: TCP
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
