--- a/helm/bigmon/charts/main/templates/configmap.yaml
+++ b/helm/bigmon/charts/main/templates/configmap.yaml
@@ -37,6 +37,12 @@ data:
   BIGMON_NUM_WSGI_PROC: "{{ .Values.httpd.numWSGI }}"
   MY_SECRET_KEY: "{{ .Values.secretKey }}"
   BIGMON_VO: "{{ .Values.vo }}"
+  SOCIAL_AUTH_GOOGLE_OAUTH2_KEY: "{{ .Values.auth.googleKey }}"
+  SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET: "{{ .Values.auth.googleSecret }}"
+  SOCIAL_AUTH_CERNOIDC_KEY: "{{ .Values.auth.cernKey }}"
+  SOCIAL_AUTH_CERNOIDC_SECRET: "{{ .Values.auth.cernSecret }}"
+  SOCIAL_AUTH_GITHUB_KEY: "{{ .Values.auth.githubKey }}"
+  SOCIAL_AUTH_GITHUB_SECRET: "{{ .Values.auth.githubSecret }}"
   # PandaDB
   PANDA_DB_NAME: "{{ .Values.database.databaseName }}"
   PANDA_DB_HOST: "{{ .Values.database.hostName }}"
