--- a/helm/bigmon/charts/main/templates/configmap.yaml
+++ b/helm/bigmon/charts/main/templates/configmap.yaml
@@ -37,6 +37,12 @@ data:
   BIGMON_NUM_WSGI_PROC: "{{ .Values.httpd.numWSGI }}"
   MY_SECRET_KEY: "{{ .Values.secretKey }}"
   BIGMON_VO: "{{ .Values.vo }}"
+  BIGMON_DEPLOYMENT: "{{ .Values.deployment }}"
+  # CRIC
+  BIGMON_CRIC_API_URL: "{{ .Values.cric.apiUrl }}"
+  # iDDS
+  BIGMON_IDDS_HOST: "{{ .Values.idds.host }}"
+  # Auth
   SOCIAL_AUTH_GOOGLE_OAUTH2_KEY: "{{ .Values.auth.googleKey }}"
   SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET: "{{ .Values.auth.googleSecret }}"
   SOCIAL_AUTH_CERNOIDC_KEY: "{{ .Values.auth.cernKey }}"
@@ -53,7 +59,7 @@ data:
   RUCIO_SERVER_HOST: "{{ .Values.rucio.rucioHost }}"
   RUCIO_AUTH_HOST: "{{ .Values.rucio.authHost }}"
   RUCIO_ACCOUNT: "{{ .Values.rucio.account }}"
-  # proxy
+  # HTTP proxy
   {{- if .Values.httpProxy }}
   http_proxy: "{{ .Values.httpProxy }}"
   {{- if .Values.noProxy }}
