--- a/helm/bigmon/charts/main/values.yaml
+++ b/helm/bigmon/charts/main/values.yaml
@@ -59,24 +59,29 @@ rucio:
 
 # Authentication
 auth:
-  # list of authentication providers
+  # list of authentication providers. Possible values are google, cern, github, indigoiam
   providers: []
+
   # Google OAuth2
   google:
     key: "FIXME"
     secret: "FIXME"
+
   # CERN
   cern:
     key: "FIXME"
     secret: "FIXME"
+
   # Github
   githu
     key: "FIXME"
     secret: "FIXME"
+
   # Indigo IAM
   indigoiam:
     key: "FIXME"
     secret: "FIXME"
+    # base URL of IAM. e.g. https://panda-iam-doma.cern.ch
     basePath: "FIXME"
 
 # cric
