--- a/helm/bigmon/charts/main/sandbox/local.py.template
+++ b/helm/bigmon/charts/main/sandbox/local.py.template
@@ -71,6 +71,9 @@ SOCIAL_AUTH_CERNOIDC_SECRET = '${SOCIAL_AUTH_CERNOIDC_SECRET}'
 SOCIAL_AUTH_GITHUB_KEY = '${SOCIAL_AUTH_GITHUB_KEY}'
 SOCIAL_AUTH_GITHUB_SECRET = '${SOCIAL_AUTH_GITHUB_SECRET}'
 
+SOCIAL_AUTH_INDIGOIAMOIDC_KEY = '${SOCIAL_AUTH_INDIGOIAMOIDC_KEY}'
+SOCIAL_AUTH_INDIGOIAMOIDC_SECRET = '#{SOCIAL_AUTH_INDIGOIAMOIDC_SECRET}'
+SOCIAL_AUTH_INDIGOIAMOIDC_BASEPATH = '#{SOCIAL_AUTH_INDIGOIAMOIDC_BASEPATH}'
 
 EMAIL_HOST = "smtp.cern.ch"
 EMAIL_PORT = 587
