--- a/helm/bigmon/charts/main/sandbox/local.py.template
+++ b/helm/bigmon/charts/main/sandbox/local.py.template
@@ -47,7 +47,7 @@ MEDIA_URL = '/media/'
 
 # log directory
 LOG_ROOT = "/data/bigmon/logs"
-DEBUG = False
+DEBUG = ${BIGMON_DEBUG}
 #USE_TZ = True
 USE_TZ = False
 PRODSYS = {
