--- a/helm/harvester/charts/harvester/templates/deployment.yaml
+++ b/helm/harvester/charts/harvester/templates/deployment.yaml
@@ -58,7 +58,7 @@ spec:
       labels:
         {{- include "harvester.selectorLabels" . | nindent 8 }}
     spec:
-      hostname:  {{ include "harvester.fullname" . }}
+      hostname:  {{ .Release.Name }}
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
@@ -84,6 +84,9 @@ spec:
           command: ["/bin/sh", "-c"]
           args:
             - while ! mysqladmin ping -h ${HARVESTER_DB_HOST} -p${MARIADB_PASSWORD} --silent; do sleep 1; done;
+              chmod -R 777 /var/log/panda;
+              rm -fr /var/log/panda/panda_harvester.pid*;
+              rm -fr /var/log/panda/*.lock;
               cp /opt/harvester/sandbox/init-harvester /data/harvester/;
               chmod +x /data/harvester/init-harvester;
               cp /opt/harvester/sandbox/run-harvester-crons /data/harvester/;
@@ -108,17 +111,22 @@ spec:
               mountPath: /opt/harvester/etc/queue_config
             - name: {{ include "harvester.fullname" . }}-sandbox
               mountPath: /opt/harvester/sandbox
-            {{- if .Values.pilotcerts.enabled }}
+            {{- if or .Values.secret.enabled .Values.pilotcerts.enabled }}
             - name: {{ include "harvester.fullname" . }}-certs
               mountPath: /opt/harvester/etc/cert
             {{- end }}
           envFrom:
+            {{- if .Values.secret.enabled }}
+            - secretRef:
+                name: {{ .Values.secret.name }}-envs
+            {{- else }}
             - configMapRef:
                 {{- if .Values.database.config_ref }}
                 name: {{ .Values.database.config_ref }}
                 {{- else }}
                 name: {{ .Release.Name }}-mariadb-configmap
                 {{- end }}
+            {{- end }}
             - configMapRef:
                 name: {{ include "harvester.fullname" . }}-env
       {{- with .Values.nodeSelector }}
@@ -146,8 +154,14 @@ spec:
         - name: {{ include "harvester.fullname" . }}-sandbox
           configMap:
             name: {{ include "harvester.fullname" . }}-sandbox
+        {{- if .Values.secret.enabled }}
+        - name: {{ include "harvester.fullname" . }}-certs
+          secret:
+              secretName: {{ .Values.secret.name }}-certs
+        {{- else }}
         {{- if .Values.pilotcerts.enabled }}
         - name: {{ include "harvester.fullname" . }}-certs
           configMap:
               name: {{ include "harvester.fullname" . }}-certs
-        {{ end }}
+        {{- end }}
+        {{- end }}
