--- a/helm/msgsvc/charts/activemq/templates/deployment.yaml
+++ b/helm/msgsvc/charts/activemq/templates/deployment.yaml
@@ -65,6 +65,18 @@ spec:
       serviceAccountName: {{ include "activemq.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      {{- if .Values.initContainers.enabled }}
+      initContainers:
+        - name: change-ownership-container
+          image: busybox
+          command: ["/bin/chown","-R","100:101", "/appdata/activemq"]
+          securityContext:
+            runAsUser: 0
+            privileged: true
+          volumeMounts:
+            - name: {{ include "activemq.fullname" . }}-data
+              mountPath: /appdata/activemq
+      {{- end}}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -95,6 +107,10 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ include "activemq.fullname" . }}-env
+            {{- if .Values.secret.enabled }}
+            - secretRef:
+                name: {{ .Values.secret.name }}-envs
+            {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
