--- a/helm/panda/charts/postgres/values.yaml
+++ b/helm/panda/charts/postgres/values.yaml
@@ -10,11 +10,16 @@ image:
   tag: latest
 
 persistentvolume:
-  create: false
-  class: nas
+  create: true
+  class: manual
   path: "/mnt/panda-data"
   size: 5Gi
   selector: true
+
+# use secret
+secret:
+  enabled: false
+  name: ""
 
 database:
   # password
