--- a/helm/panda/charts/server/panda_server_config.json
+++ b/helm/panda/charts/server/panda_server_config.json
@@ -17,7 +17,7 @@
         "adder_plugins": "wlcg:dataservice.AdderDummyPlugin:AdderDummyPlugin,wlcg:dataservice.AdderSimplePlugin:AdderSimplePlugin:sphenix",
         "setupper_plugins": "wlcg:dataservice.SetupperDummyPlugin:SetupperDummyPlugin", 
         "token_authType": "oidc",
-        "cache_dir": "/var/cache/pandaserver",
+        "cache_dir": "/var/log/panda/pandacache",
         "sandboxHostname": "$PANDA_SANDBOX_HOST",
         "mbproxy_configFile": "/opt/panda/etc/panda/panda_mbproxy_config.json"
     },
