--- a/helm/idds/charts/postgres/values.yaml
+++ b/helm/idds/charts/postgres/values.yaml
@@ -16,6 +16,10 @@ persistentvolume:
   path: "/mnt/idds-database"
   size: 5Gi
 
+secret:
+  enabled: false
+  name: ""
+
 database:
   name: postgresdb
   user: admin
