--- a/helm/idds/values.yaml
+++ b/helm/idds/values.yaml
@@ -2,47 +2,22 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-# idds_db, idds_user and idds_schema can be changed currently
-database:
-  idds_db: &idds_db "idds_db"
-  idds_user: &idds_user "idds"
-  idds_password: &idds_password "MyPass123"
-  idds_schema: &idds_schema "doma_idds"
 
 daemon:
   enabled: true
   image:
-    tag: "0.11.4"
-
-  # run with non-root pid
-  # noRoot: false
-
-  database:
-    name: *idds_db
-    user: *idds_user
-    password: *idds_password
-    schema: *idds_schema
-
-  conductor:
-    brokers: activemq-dev
-    port: 61613
-    destination: /queue/iddspanda
-    username: FIXME_WRITER
-    password: FIXME_PASS
+    tag: "0.11.9"
 
 rest:
   enabled: true
   image:
-    tag: "0.11.4"
+    tag: "0.11.9"
 
-  # run with non-root pid
-  # noRoot: false
+  podSecurityContext:
+    fsGroup: 1000
+  # securityContext:
+  #   fsGroup: 48
 
-  database:
-    name: *idds_db
-    user: *idds_user
-    password: *idds_password
-    schema: *idds_schema
 
 postgres:
   enabled: true
@@ -50,7 +25,8 @@ postgres:
     tag: "13.6"
 
   database:
-    name: *idds_db
-    user: *idds_user
-    password: *idds_password
-    schema: *idds_schema
+    name: "idds_db"
+    user: "idds"
+    password: "MyPass123"
+    schema: "doma_idds"
+    host: ""
