--- a/helm/idds/charts/rest/templates/deployment.yaml
+++ b/helm/idds/charts/rest/templates/deployment.yaml
@@ -58,7 +58,7 @@ spec:
       labels:
         {{- include "rest.selectorLabels" . | nindent 8 }}
     spec:
-      hostname:  {{ include "rest.fullname" . }}-local
+      hostname:  {{ .Release.Name}}
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
@@ -87,9 +87,22 @@ spec:
             - name: https
               containerPort: 8443
               protocol: TCP
+            - name: http
+              containerPort: 8080
+              protocol: TCP
           envFrom:
             - configMapRef:
                 name: {{ include "rest.fullname" . }}-envs
+            - configMapRef:
+                {{- if .Values.database.config_ref }}
+                name: {{ .Values.database.config_ref }}
+                {{- else }}
+                name: {{ .Release.Name }}-postgres-configmap
+                {{- end }}
+            {{- if .Values.secret.enabled }}
+            - secretRef:
+                name: {{ .Values.secret.name }}-envs
+            {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
@@ -97,10 +110,10 @@ spec:
                 mountPath: /var/log/idds/
               - name: {{ include "rest.fullname" . }}-configmap
                 mountPath: /opt/idds/configmap
-              {{- if .Values.hostcerts.enabled -}}
+              {{- if or .Values.secret.enabled .Values.hostcerts.enabled }}
               - name: {{ include "rest.fullname" . }}-certs
-                mountPath: /opt/idds/configmap
-              {{- end }}
+                mountPath: /opt/idds/certs
+              {{- end}}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -120,8 +133,14 @@ spec:
         - name: {{ include "rest.fullname" . }}-configmap
           configMap:
               name: {{ include "rest.fullname" . }}-configmap
+        {{- if .Values.secret.enabled }}
+        - name: {{ include "rest.fullname" . }}-certs
+          secret:
+              secretName: {{ .Values.secret.name }}-certs
+        {{- else }}
         {{- if .Values.hostcerts.enabled -}}
         - name: {{ include "rest.fullname" . }}-certs
           configMap:
               name: {{ include "rest.fullname" . }}-certs
+        {{- end }}
         {{- end }}
