remove fsgroup for msgsvc

--- a/helm/msgsvc/charts/activemq/values.yaml
+++ b/helm/msgsvc/charts/activemq/values.yaml
@@ -37,9 +37,8 @@ initContainers:
 
 podAnnotations: {}
 
-# podSecurityContext: {}
-podSecurityContext:
-  fsGroup: 101
+podSecurityContext: {}
+  # fsGroup: 2000
 
 securityContext: {}
   # capabilities:
